# weatherapi

./: .dockerignore  .gitignore  Dockerfile  README.md  get_seattle_weather.sh  pyproject.toml  requirements.txt  start.sh
src/app/: __init__.py  http_client.py  main.py  weather.py
src/tests/: main_integration_test.py  main_test.py  weather_test.py
