[project]
name = "weatherapi"
version = "0.1.0"
description = "provides a thin gateway to the weather.gov API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.7",
    "hatch>=1.14.0",
    "httpx>=0.28.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "uvicorn>=0.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
